[package]
name = "rs-v2ray-pac-watcher-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0"
actix-rt = "2.5"
futures = "0.3"
tokio = { version = "1", features = ["full"] }
notify = "5.0.0-pre.11"
env_logger = "0.10.0"
log = "0.4.17"